crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__nested_pointer.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/nested_pointer.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: nested_pointer.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

#[allow(unused_imports)]
use crate::renderer::gpu_read::GPURead;
use crate::renderer::render_graph::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct NestedDraw {
    pub slots: Addr<NestedSlot>,
    pub index: u32,
    pub _padding_0: [u8; 4],
}

impl GPUWrite for NestedDraw {}
const _: () = assert!(std::mem::size_of::<NestedDraw>() == 16);
const _: () = assert!(std::mem::offset_of!(NestedDraw, slots) == 0);
const _: () = assert!(std::mem::size_of::<Addr<NestedSlot>>() == 8);
const _: () = assert!(std::mem::offset_of!(NestedDraw, index) == 8);
const _: () = assert!(std::mem::size_of::<u32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct NestedSlot {
    pub item: ImmutableAddr<NestedInner>,
    pub tag: u32,
    pub _padding_0: [u8; 4],
}

impl GPUWrite for NestedSlot {}
const _: () = assert!(std::mem::size_of::<NestedSlot>() == 16);
const _: () = assert!(std::mem::offset_of!(NestedSlot, item) == 0);
const _: () = assert!(std::mem::size_of::<ImmutableAddr<NestedInner>>() == 8);
const _: () = assert!(std::mem::offset_of!(NestedSlot, tag) == 8);
const _: () = assert!(std::mem::size_of::<u32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct NestedInner {
    pub v: glam::Vec3,
    pub w: f32,
}

impl GPUWrite for NestedInner {}
const _: () = assert!(std::mem::size_of::<NestedInner>() == 16);
const _: () = assert!(std::mem::offset_of!(NestedInner, v) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(NestedInner, w) == 12);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct NestedParams {
    pub tint: glam::Vec4,
}

impl GPUWrite for NestedParams {}
const _: () = assert!(std::mem::size_of::<NestedParams>() == 16);
const _: () = assert!(std::mem::offset_of!(NestedParams, tint) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<NestedParams>,
}

impl GPURead for NestedInner {
    const GPU_SIZE: usize = 16;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for NestedInner"
        );

        Ok(Self {
            v: glam::Vec3::from_array(<[f32; 3] as GPURead>::read_gpu(&bytes[0..12])?),
            w: GPURead::read_gpu(&bytes[12..16])?,
        })
    }
}

impl GPURead for NestedParams {
    const GPU_SIZE: usize = 16;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for NestedParams"
        );

        Ok(Self {
            tint: GPURead::read_gpu(&bytes[0..16])?,
        })
    }
}

#[derive(Debug, Clone, Copy)]
pub struct NestedDrawData {
    pub index: u32,
}

#[derive(Debug, Clone, Copy)]
pub struct NestedDrawBindings {
    pub slots: BufferBinding<NestedSlot>,
}

impl GraphParamBindingSet for NestedDrawBindings {
    type Pending = PendingParamBindings<Self>;

    fn pending() -> Self::Pending {
        Self::Pending::new()
    }
}

impl GraphBindingSet for NestedDrawBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.slots.erased()));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct NestedDrawInput {
    pub slots: BufferBinding<NestedSlot>,
    pub index: u32,
}

impl GraphShaderParams for NestedDraw {
    type Data = NestedDrawData;
    type Bindings = NestedDrawBindings;
    type Input = NestedDrawInput;

    fn input(data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            index: data.index,
            slots: bindings.slots,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            slots: resolver.buf(input.slots),
            index: input.index,
            _padding_0: Default::default(),
        }
    }
}

impl GraphBindingSet for NestedDrawInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.slots.erased()));
    }
}

/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct NestedParamsInput {
    pub tint: glam::Vec4,
}

impl GraphShaderParams for NestedParams {
    type Data = Self;
    type Bindings = ();
    type Input = NestedParamsInput;

    fn input(data: &Self::Data, _bindings: &Self::Bindings) -> Self::Input {
        Self::Input { tint: data.tint }
    }

    fn assemble_input(input: &Self::Input, _resolver: &BindingResolver<'_>) -> Self {
        Self { tint: input.tint }
    }
}

impl GraphBindingSet for NestedParamsInput {
    fn visit(&self, _f: &mut dyn FnMut(GraphBinding)) {}
}

impl crate::renderer::render_graph::PushConstantBlock for NestedDraw {}
// 128 bytes is the vulkan-guaranteed maxPushConstantsSize
const _: () = assert!(std::mem::size_of::<NestedDraw>() <= 128);

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/nested_pointer.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> PipelineConfig<'a, NoVertex, DrawVertexCount, PushBlock<NestedDraw>> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/nested_pointer.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/nested_pointer.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
